# sams-thesis-package

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/: main.ipynb  obse.ipynb  obse_main.ipynb  read_csv.ipynb
src/afvar/: afvar.py
src/common/: common.py
src/helpers/: obse.py
src/obse/: obse.py
