[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gérard Lichtert <gerard.lichtert@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
jupyter = "^1.0.0"
polars = "^0.20.23"
xlsxwriter = "^3.2.0"
statistics = "^1.0.3.5"
pandas = "^2.2.2"
pyarrow = "^16.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
